--- a/css/styles.css
+++ b/css/styles.css
@@ -128,8 +128,22 @@ img {
     color: var(--accent-color);
 }
 
-.site-nav .link.current {
+.nav-link.current {
     color: var(--accent-color);
+}
+
+.nav-link.current::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    display: block; 
+    width: 100%;
+    height: 4px;
+
+    border-radius: 2px;
+    background-color: var(--accent-color)
 }
 
 .nav-link {
@@ -137,12 +151,14 @@ img {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    position: relative;
     
     color: var(--primary-text-color-theme-light);
     padding-top: 32px;
     padding-bottom: 32px;
     display: block;
 }
+
 
 .nav-item:not(:last-child) {
     margin-right: 50px;
@@ -321,6 +337,35 @@ color: var(--primary-text-color-theme-light);
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+}
+
+.wrapper {
+    position: relative;
+}
+
+.overlay-box {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);;
+}
+
+.overlay-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+
+    color: #FFFFFF;
+    /* outline: 2px solid tomato; */
 }
 
 /* Our Team */
