--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,8 @@
     --accent-color:#2196F3;
     --logo-color:#000000;
     --order-button-background-color: #188CE8;
-    --overlay-color: rgba(47, 48, 58, 0.4)
+    --overlay-color: rgba(47, 48, 58, 0.4);
+    --modal-bg-color: #00000033;
 }
 
 body {
@@ -265,6 +266,70 @@ img {
 .button-order:hover,
 .button-order:focus {
     background-color: var(--order-button-background-color);
+}
+
+/* ----------------modal-------------------- */
+
+.backdrop {
+    position: fixed;
+    visibility: visible;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--modal-bg-color);
+    opacity: 1;
+    z-index: 1;
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 8px;
+    right: 8px;
+    fill: var(--primary-text-color-theme-light);
+    background: var(--primary-text-color-theme-dark);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    fill: var(--accent-color);
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.9);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    min-height: 581px;
+    min-width: 528px;
+    background-color: var(--primary-text-color-theme-dark);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Section */
@@ -623,4 +688,41 @@ color: var(--primary-text-color-theme-light);
     line-height: 1.88;
 
     color: var(--secondary-text-color-theme-light);
+}
+
+.visual-content {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay-site-text {
+    position: absolute;
+    text-transform: inherit;
+
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color-theme-dark);
+
+    max-width: 322px;
+    left: 25px;
+    top: 63px;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+
+    transform: translateY(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.site:focus .overlay,
+.site:hover .overlay,
+.site-link:hover .overlay,
+.site-link:focus .overlay {
+    transform: translateY(-100%);
 }
