--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
     --order-button-background-color: #188CE8;
     --overlay-color: rgba(47, 48, 58, 0.4);
     --modal-bg-color: #00000033;
+    --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -136,7 +137,7 @@ img {
 .nav-link.current::after {
     content: '';
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
 
     display: block; 
@@ -158,6 +159,7 @@ img {
     padding-top: 32px;
     padding-bottom: 32px;
     display: block;
+    transition: color var(--transition);
 }
 
 
@@ -198,6 +200,7 @@ img {
     display: flex;
     align-items: center;
     gap: 10px;
+    transition: color var(--transition);
 }
 
 .adress-city:hover,
@@ -281,16 +284,16 @@ img {
     opacity: 1;
     z-index: 1;
 
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity var(--transition),
+        visibility var(--transition);
 }
 
 .backdrop.is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity var(--transition),
+        visibility var(--transition);
 }
 
 .close-btn {
@@ -304,7 +307,7 @@ img {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     cursor: pointer;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill var(--transition);
 }
 
 .close-btn:hover,
@@ -495,6 +498,7 @@ color: var(--primary-text-color-theme-light);
     background-color: #fff;
     color: rgba(175, 177, 184, 1);
     border-radius: 50%;
+    transition: color var(--transition), background-color var(--transition);
 }
 
 .socials-icon {
@@ -530,6 +534,7 @@ color: var(--primary-text-color-theme-light);
     color: #AFB1B8;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+    transition: color var(--transition), border-color var(--transition);
 }
 
 .customer-icon {
@@ -573,6 +578,7 @@ color: var(--primary-text-color-theme-light);
 
 .adress-city {
     color: var(--primary-text-color-theme-dark);
+    transition: color var(--transition);
 }
 
 .contact-footer {
@@ -642,6 +648,9 @@ color: var(--primary-text-color-theme-light);
     border: transparent;
     border-radius: 4px;
     padding: 6px 22px;
+    transition: color var(--transition),
+        box-shadow var(--transition),
+        background-color var(--transition);
 }
 
 .portfolio-btn:hover,
@@ -716,7 +725,7 @@ color: var(--primary-text-color-theme-light);
     background-color: rgba(33, 150, 243, 0.9);
 
     transform: translateY(0);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform var(--transition);
 }
 
 
